# dynamic-mcp

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  ENV_VAR_CONFIG.md  IMPLEMENTATION_STATUS.md  LICENSE  LIVE_RELOAD.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE4_COMPLETE.md  README.md  SECURITY.md  TESTING.md  config-schema.json  config.example.json  dynamic-mcp.json  mise.toml  pyproject.toml  test_complete.sh  test_live_reload.sh  test_mcp.sh  test_phase1.sh  test_phase1_final.sh
.claude/: settings.json  settings.local.json
.cursor/: mcp.json
.github/workflows/: ci.yml  release.yml
.opencode/: oc.json  oh-my-opencode.jsonc  opencode.jsonc
benches/: performance.rs
docs/: ARCHITECTURE.md  IMPORT.md  MIGRATION.md  PLAN.md  README.md  RESEARCH.md
docs/history/: PLAN.md  RELEASE_v1.0.0.md  RESEARCH.md
docs/implementation/: ARCHITECTURE.md  DEVELOPMENT.md  ENV_VAR_CONFIG.md  IMPLEMENTATION_STATUS.md  IMPORT_INTEGRATION_TESTS.md  IMPORT_MULTI_TOOL.md  LIMITATIONS_FIXED.md  LIVE_RELOAD.md  LIVE_RELOAD_STATUS.md  MCP_SPEC_COMPLIANCE.md  MIGRATE_MULTI_TOOL.md  MIGRATION_INTEGRATION_TESTS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PLAN.md  RELEASE_v1.0.0.md  RESOURCES_API_IMPLEMENTATION.md  STATUS.md  TESTING.md
docs/implementation/mvp/: PLAN.md  RELEASE_v1.0.0.md  RESEARCH.md
docs/implementation/plans/: LAZY_STARTUP.md  TIMEOUTS.md
examples/: config.example.json  config.features.example.json  config.oauth.example.json  config.remote.example.json
src/: main.rs  server.rs  watcher.rs
src/auth/: mod.rs  oauth_client.rs  store.rs
src/cli/: AGENTS.md  config_parser.rs  import.rs  import_enhanced.rs  migrate.rs  migrate_enhanced.rs  mod.rs  tool_detector.rs
src/config/: env_sub.rs  loader.rs  mod.rs  schema.rs
src/proxy/: client.rs  mod.rs  transport.rs  types.rs
tests/: README.md  cli_import_integration_test.rs  cli_integration_test.rs  config_integration_test.rs  everything_server_integration_test.rs  features_test.rs  import_integration_test.rs  integration_test.rs  migrate_integration_test.rs  prompts_api_spec_compliance_test.rs  prompts_integration_test.rs  prompts_test.rs  resources_api_spec_compliance_test.rs  resources_integration_test.rs  resources_test.rs  server_everything_e2e_test.rs  tools_api_integration_test.rs  tools_test.rs
tests/fixtures/: config.test.json
tests/fixtures/import/antigravity/: global.json
tests/fixtures/import/claude/: global.json  invalid.json  project-mcp.json  project.json
tests/fixtures/import/claude-desktop/: global.json  invalid.json
tests/fixtures/import/cline/: invalid.json  project.json
tests/fixtures/import/codex/: global.toml  invalid.toml
tests/fixtures/import/cursor/: global.json  invalid.json  project.json
tests/fixtures/import/kilocode/: invalid.json  project.json
tests/fixtures/import/opencode/: global-json.json  global.jsonc  invalid.jsonc  project-json.json
tests/fixtures/import/vscode/: invalid.json
tests/fixtures/migrate/antigravity/: global.json
tests/fixtures/migrate/claude/: global.json  project.json
tests/fixtures/migrate/claude-desktop/: global.json
tests/fixtures/migrate/cline/: project.json
tests/fixtures/migrate/codex/: global.toml
tests/fixtures/migrate/cursor/: global.json  project.json
tests/fixtures/migrate/gemini/: global.json  project.json
tests/fixtures/migrate/kilocode/: project.json
tests/fixtures/migrate/opencode/: global-json.json  project-json.json  project.jsonc
tests/fixtures/migrate/vscode/: global.json  project.json
tests/scripts/: test_all_servers.sh  test_complete.sh  test_live_reload.sh  test_mcp.sh  test_phase1.sh  test_phase1_final.sh  test_servers_detailed.sh
